# diffpy.mpdf

./: .gitignore  AUTHORS.txt  LICENSE.txt  MANIFEST.in  README.md  check.py  check.py~  example_MnO-cubic.py  example_MnO-cubic.py~  example_corefinement1.py  example_corefinement2.py  example_fromPDFgui.py  example_fromPDFgui.py~  example_fromSrfit.py  example_jointRefinement.py  formfactor_j0.txt  getmPDF.py  index.html  mPDFcalculator.py~  mcalculator.py  mcalculator.py~  mcalculator_mod_orig.py  pyproject.toml  requirements.readthedocs.txt  setup.py  test.py~  test_iqcalc.py  test_iqcalc.py~
conda-recipe/: bld.bat  build.sh  meta.yaml  run_test.py
conda-recipe/linux-32/: diffpy.magpdf-0.0.0-py27_0.tar.bz2  diffpy.mpdf-0.0.0-py27_0.tar.bz2  diffpy.mpdf-1.0.0-py27hbb1f638_0.tar.bz2
conda-recipe/linux-64/: diffpy.mpdf-0.0.0-py27_0.tar.bz2
conda-recipe/osx-64/: diffpy.magpdf-0.0.0-py27_0.tar.bz2  diffpy.mpdf-0.0.0-py27_0.tar.bz2  diffpy.mpdf-1.0.0-py27hbb1f638_0.tar.bz2
conda-recipe/win-32/: diffpy.mpdf-0.0.0-py27_0.tar.bz2
diffpy/: __init__.py
doc/: Makefile  conf.py
docs/: index.html  index.md  magstructure.html  magutils.html  mciftools.html  mpdf3Dcalculator.html  mpdfcalculator.html  mpdftransformer.html  visualize3D.html
examples/: example_MnO-cubic.py  example_corefinement1.py  example_corefinement2.py  example_fromPDFgui.py  example_fromSrfit.py  example_helical.py  example_refineSpinDir.ipynb  introTutorial.ipynb
magpdf/: __init__.py  magstructure.py  mpdfcalculator.py
mpdfcalculator/: __init__.py  mcalculator.py  mcalculator.py~
(+102 files in other folders)
